mobile responsiv update

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="contact-container">
     <div class="menu-footer-content" #arrowTrigger3>
         <div class="greet">
-            <p>Say Hi!</p>
+            <h2>Say Hi!</h2>
         </div>
     </div>
     <div class="contact-main-container">
