--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 <div id="mySkills" class="skill-container">
     <div #arrowTrigger class="skill-text">
-        <p>My skills</p> 
+        <h2>My skills</h2> 
     </div>
     <div class="border">
         <div *ngFor="let skill of ['Angular', 'TypeScript', 'JavaScript', 'HTML', 'CSS', 'Firebase', 'Git', 'Scrum', 'Rest-Api', 'Material Design'] ">
