--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -9,85 +9,85 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
+    }
+}
 
-        .greet {
-            width: 90%;
-            display: flex;
-            justify-content: flex-start;
-            padding-bottom: 50px;
+.greet {
+    width: 90%;
+    display: flex;
+    justify-content: flex-start;
+    padding-bottom: 50px;
 
-            p {
-                font-size: 78px;
-                font-family: Syne;
-                font-weight: 800;
-                margin: 0;
-                color: #FFFCF3;
+    h2 {
+        font-size: 78px;
+        font-family: Syne;
+        font-weight: 800;
+        margin: 0;
+        color: #FFFCF3;
 
-                &:hover {
-                    transition: color 0.190s ease-in-out;
-                    color: #00BC8F;
-                }
-            }
+        &:hover {
+            transition: color 0.190s ease-in-out;
+            color: #00BC8F;
         }
     }
+}
 
-    .contact-main-container {
-        background-color: #000000;
+.contact-main-container {
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+
+    .contact-form {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        position: relative;
 
-        .contact-form {
+        h3 {
+            font-family: Overpass;
+            font-size: 32px;
+            font-weight: 700;
+            text-align: center;
+            color: #00BC8F;
+            margin-top: 0px;
+            margin-bottom: 0px;
+        }
+
+        p {
+            font-family: Overpass;
+            font-size: 23px;
+            font-weight: 400;
+            text-align: center;
+            color: #FFFCF3;
+            margin-top: 18px;
+            margin-bottom: 18px;
+        }
+
+        .input-container {
             display: flex;
             flex-direction: column;
+            max-width: 710px;
+            width: 90vw;
             align-items: center;
-            width: 90%;
-            position: relative;
 
-            h3 {
-                font-family: Overpass;
-                font-size: 32px;
-                font-weight: 700;
-                text-align: center;
-                color: #00BC8F;
-                margin-top: 0px;
-                margin-bottom: 0px;
-            }
-
-            p {
-                font-family: Overpass;
-                font-size: 23px;
-                font-weight: 400;
-                text-align: center;
-                color: #FFFCF3;
-                margin-top: 18px;
-                margin-bottom: 18px;
-            }
-
-            .input-container {
-                display: flex;
-                flex-direction: column;
-                width: 617px;
-                align-items: center;
+            form {
+                width: 100%;
 
                 .befor-container {
                     position: relative;
+                    width: 100%;
 
                     .pull-tab {
-                        height: 30px;
-                        width: 30px;
-                        position: absolute;
-                        bottom: 5px;
-                        right: -7px;
-                        pointer-events: none;
-                        background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
-                        z-index: 2;
+                        display: none;
                     }
 
                     input,
                     textarea {
                         position: relative;
                         outline: none;
-                        width: 617px;
+                        max-width: 617px;
+                        width: calc(100% - 85px);
                         padding: 15px 60px 15px 25px;
                         margin-bottom: 2.5px;
                         border-bottom: 2px solid #FFFCF3;
@@ -121,203 +121,203 @@
                         right: 25px;
                     }
                 }
+            }
 
-                textarea {
-                    min-height: 198px;
-                    resize: vertical;
+            textarea {
+                min-height: 198px;
+                resize: vertical;
 
 
+            }
+
+            textarea::-webkit-resizer {
+                display: none;
+            }
+        }
+
+        .error-message-container {
+            height: 16px;
+
+            .error-message-active {
+                font-family: Overpass;
+                font-size: 12px;
+                color: #E61C40;
+                padding-top: 5px;
+                padding-bottom: 18px;
+                animation: slide-in 0.2s ease-in-out;
+            }
+        }
+
+        .error-active {
+            animation: slide-out 0.2s ease-in-out forwards;
+        }
+
+        .privacy-policy-box {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding-bottom: 20px;
+
+            .agree-hover {
+                width: 24px;
+                height: 24px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-right: 10px;
+
+                &:hover {
+                    background-color: #00BC8F;
                 }
 
-                textarea::-webkit-resizer {
-                    display: none;
-                }
+                .agree-box {
+                    position: relative;
+                    cursor: pointer;
+                    -webkit-user-select: none;
+                    -moz-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
+                    width: 14px;
+                    height: 14px;
+                    border: 2px solid #FFFCF3;
+                    border-radius: 2px;
 
-                .error-message-container {
-                    height: 16px;
-
-                    .error-message-active {
-                        font-family: Overpass;
-                        font-size: 12px;
-                        color: #E61C40;
-                        padding-top: 5px;
-                        padding-bottom: 18px;
-                        animation: slide-in 0.2s ease-in-out;
-                    }
-                }
-
-                .error-active {
-                    animation: slide-out 0.2s ease-in-out forwards;
-                }
-
-                .privacy-policy-box {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding-bottom: 20px;
-
-                    .agree-hover {
-                        width: 24px;
-                        height: 24px;
-                        border-radius: 50%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        margin-right: 10px;
-
-                        &:hover {
-                            background-color: #00BC8F;
-                        }
-
-                        .agree-box {
-                            position: relative;
-                            cursor: pointer;
-                            -webkit-user-select: none;
-                            -moz-user-select: none;
-                            -ms-user-select: none;
-                            user-select: none;
-                            width: 14px;
-                            height: 14px;
-                            border: 2px solid #FFFCF3;
-                            border-radius: 2px;
-
-                            input {
-                                position: absolute;
-                                opacity: 0;
-                                cursor: pointer;
-                                height: 0;
-                                width: 0;
-
-                                &:checked~.checkmark:after {
-                                    display: block;
-                                }
-                            }
-
-                            .checkmark {
-                                &:after {
-                                    position: absolute;
-                                    content: "";
-                                    display: none;
-                                    left: 4px;
-                                    top: 1px;
-                                    width: 4px;
-                                    height: 8px;
-                                    border: solid #FFFCF3;
-                                    border-width: 0 2px 2px 0;
-                                    -webkit-transform: rotate(45deg);
-                                    -ms-transform: rotate(45deg);
-                                    transform: rotate(45deg);
-                                }
-                            }
-                        }
-                    }
-
-                    p {
-                        font-family: Overpass;
-                        font-size: 14px;
-                        font-weight: 400;
-                        color: #FFFCF3;
-                    }
-
-                    .privacy-policy-link {
-                        width: 105px;
-                        display: flex;
-                        justify-content: center;
-
-                        a {
-                            font-family: Overpass;
-                            font-size: 14px;
-                            font-weight: 400;
-                            text-decoration: none;
-                            color: #00BC8F;
-
-                            &:hover {
-                                font-weight: 800;
-                            }
-                        }
-                    }
-                }
-
-                .button-container {
-                    display: flex;
-                    justify-content: center;
-
-                    button {
-                        width: 269px;
-                        height: 68px;
-                        border: 4px solid #FFFCF3;
-                        opacity: 0.3;
-                        background-color: #000000;
-                        color: #FFFCF3;
-                        font-family: Overpass;
-                        font-size: 23px;
-                        font-weight: 400;
-                        text-align: center;
-                    }
-                }
-
-                .active {
-                    animation: button-active 0.2s ease-in-out forwards;
-                }
-
-                .arrow-up-container {
-                    position: absolute;
-                    right: -4px;
-                    bottom: 0px;
-
-                    .arrow-up {
-                        position: relative;
-                        width: 48px;
-                        height: 80px;
-                        display: flex;
-                        align-items: flex-end;
+                    input {
+                        position: absolute;
+                        opacity: 0;
                         cursor: pointer;
+                        height: 0;
+                        width: 0;
 
-                        .line {
-                            background-color: rgb(255, 255, 255);
+                        &:checked~.checkmark:after {
+                            display: block;
+                        }
+                    }
+
+                    .checkmark {
+                        &:after {
                             position: absolute;
-                        }
-
-                        .line:nth-child(1) {
+                            content: "";
+                            display: none;
+                            left: 4px;
+                            top: 1px;
                             width: 4px;
-                            height: 52px;
-                            right: 21px;
-                            bottom: 0px;
+                            height: 8px;
+                            border: solid #FFFCF3;
+                            border-width: 0 2px 2px 0;
+                            -webkit-transform: rotate(45deg);
+                            -ms-transform: rotate(45deg);
+                            transform: rotate(45deg);
                         }
-
-                        .line:nth-child(2) {
-                            width: 30px;
-                            height: 4px;
-                            bottom: 44px;
-                            right: -2px;
-                            transform: rotate(40deg);
-                        }
-
-                        .line:nth-child(3) {
-                            width: 30px;
-                            height: 4px;
-                            bottom: 44px;
-                            right: 19px;
-                            transform: rotate(140deg);
-                        }
-                    }
-
-                    .hover-up-line {
-                        animation: hover-up-active 0.2s ease-in-out forwards;
-                    }
-
-                    .reset-down-line {
-                        animation: hover-down-inaktiv 0.2s ease-in-out forwards;
-                    }
-
-                    .hover-up-line-vertival {
-                        animation: hover-vertival-active 0.2s ease-in-out forwards;
-                    }
-
-                    .reset-down-line-vertival {
-                        animation: hover-vertival-inaktiv 0.2s ease-in-out forwards;
                     }
                 }
+            }
+
+            p {
+                font-family: Overpass;
+                font-size: 14px;
+                font-weight: 400;
+                color: #FFFCF3;
+            }
+
+            .privacy-policy-link {
+                width: 105px;
+                display: flex;
+                justify-content: center;
+
+                a {
+                    font-family: Overpass;
+                    font-size: 14px;
+                    font-weight: 400;
+                    text-decoration: none;
+                    color: #00BC8F;
+
+                    &:hover {
+                        font-weight: 800;
+                    }
+                }
+            }
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+
+            button {
+                width: 269px;
+                height: 68px;
+                border: 4px solid #FFFCF3;
+                opacity: 0.3;
+                background-color: #000000;
+                color: #FFFCF3;
+                font-family: Overpass;
+                font-size: 23px;
+                font-weight: 400;
+                text-align: center;
+            }
+        }
+
+        .active {
+            animation: button-active 0.2s ease-in-out forwards;
+        }
+
+        .arrow-up-container {
+            position: absolute;
+            right: -4px;
+            bottom: 0px;
+
+            .arrow-up {
+                position: relative;
+                width: 48px;
+                height: 80px;
+                display: flex;
+                align-items: flex-end;
+                cursor: pointer;
+
+                .line {
+                    background-color: rgb(255, 255, 255);
+                    position: absolute;
+                }
+
+                .line:nth-child(1) {
+                    width: 4px;
+                    height: 52px;
+                    right: 21px;
+                    bottom: 0px;
+                }
+
+                .line:nth-child(2) {
+                    width: 30px;
+                    height: 4px;
+                    bottom: 44px;
+                    right: -2px;
+                    transform: rotate(40deg);
+                }
+
+                .line:nth-child(3) {
+                    width: 30px;
+                    height: 4px;
+                    bottom: 44px;
+                    right: 19px;
+                    transform: rotate(140deg);
+                }
+            }
+
+            .hover-up-line {
+                animation: hover-up-active 0.2s ease-in-out forwards;
+            }
+
+            .reset-down-line {
+                animation: hover-down-inaktiv 0.2s ease-in-out forwards;
+            }
+
+            .hover-up-line-vertival {
+                animation: hover-vertival-active 0.2s ease-in-out forwards;
+            }
+
+            .reset-down-line-vertival {
+                animation: hover-vertival-inaktiv 0.2s ease-in-out forwards;
             }
         }
     }
@@ -424,5 +424,18 @@
 
     100% {
         bottom: 44px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .greet {
+        width: 90%;
+        display: flex;
+        justify-content: flex-start;
+        padding-bottom: 50px;
+    
+        h2 {
+            font-size: 45px;
+        }
     }
 }
