--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -12,7 +12,7 @@
     height: 100px;
     background-color: #FFFCF3;
 
-    p {
+    h2 {
       font-family: Syne;
       font-size: 78px;
       font-weight: 800;
@@ -25,82 +25,113 @@
       }
     }
   }
+}
 
-  .border {
-    border: 4px solid black;
+.border {
+  border: 4px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 70px 40px 70px;
+  max-width: 1300px;
+
+  div {
+    margin: 50px 70px 50px 70px;
+    width: 100px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    padding: 100px 70px 40px 70px;
-    max-width: 1300px;
+    width: 85px;
+    overflow: hidden;
 
-    div {
-      margin: 50px 70px 50px 70px;
-      width: 100px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 85px;
-      overflow: hidden;
+    p {
+      font-family: Overpass;
+      font-size: 16px;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    &:hover {
+      img {
+        animation: circle-animation 0.27s forwards linear;
+      }
 
       p {
-        font-family: Overpass;
-        font-size: 16px;
-        font-weight: 700;
-        text-align: center;
+        transition: color 0.190s ease-in-out;
+        color: #00BC8F;
+      }
+    }
+
+    @keyframes circle-animation {
+      0% {
+        transform: translateX(0) scale(1);
       }
 
-      &:hover {
-        img {
-          animation: circle-animation 0.27s forwards linear;
-        }
-
-        p {
-          transition: color 0.190s ease-in-out;
-          color: #00BC8F;
-        }
+      12% {
+        transform: translateX(25px) scale(0.9);
       }
 
-      @keyframes circle-animation {
-        0% {
-          transform: translateX(0) scale(1);
-        }
+      25% {
+        transform: translateX(50px) scale(0.8);
+      }
 
-        12% {
-          transform: translateX(25px) scale(0.9);
-        }
+      37% {
+        transform: translateX(25px) scale(0.6);
+      }
 
-        25% {
-          transform: translateX(50px) scale(0.8);
-        }
+      50% {
+        transform: translateX(0px) scale(0.4);
+      }
 
-        37% {
-          transform: translateX(25px) scale(0.6);
-        }
+      62% {
+        transform: translateX(-25px) scale(0.6);
+      }
 
-        50% {
-          transform: translateX(0px) scale(0.4);
-        }
+      75% {
+        transform: translateX(-50px) scale(0.8);
+      }
 
-        62% {
-          transform: translateX(-25px) scale(0.6);
-        }
+      87% {
+        transform: translateX(-25px) scale(0.9);
+      }
 
-        75% {
-          transform: translateX(-50px) scale(0.8);
-        }
+      100% {
+        transform: translateX(0px) scale(1);
+      }
+    }
+  }
+}
 
-        87% {
-          transform: translateX(-25px) scale(0.9);
-        }
+@media (max-width: 1024px) {}
 
-        100% {
-          transform: translateX(0px) scale(1);
-        }
+@media (max-width: 915px) {
+
+  .skill-container {
+    width: 90%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    padding-top: 5.464vw;
+
+    .skill-text {
+      position: absolute;
+      top: -1px;
+      width: 61.2vw;
+      height: 100px;
+
+      h2 {
+        font-size: 8.533vw;
       }
     }
   }
 
+  .border {
+    padding: 12% 5.5% 4.8% 5.5%;
 
+    div {
+      margin: 6% 6% 6% 6%;
+      width: 85px;
+    }
+  }
 }
