--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -38,85 +38,100 @@
     align-items: center;
     transform: translateY(2500px) !important;
     transition: transform 0.225s ease-in-out;
+}
 
-    nav {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        background-color: #FFFCF3;
-        width: 100vw;
-        flex-grow: 1;
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #FFFCF3;
+    width: 100vw;
+    flex-grow: 1;
+}
 
-        .border {
-            height: 170px;
-            width: 600px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            cursor: pointer;
+.border-base {
+    height: 170px;
+    width: 580px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
 
-            &::before {
-                content: attr(href);
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                border-bottom: 4px solid black;
-                border-left: 4px solid black;
-                width: 39px;
-                height: 52px;
-
-                @keyframes border-animation {
-                    35% {
-                        height: 0px;
-                        width: 39px;
-                        left: 0px;
-                    }
-
-                    45% {
-                        width: 600px;
-                    }
-
-                    70% {
-                        height: 0px;
-                        width: 600px;
-                        left: 0px;
-
-                    }
-
-                    100% {
-                        height: 0px;
-                        width: 250px;
-                        left: 0px;
-                        left: 350px;
-                    }
-                }
-            }
-
-            &:hover::before {
-                animation: border-animation 0.2s ease-out;
-                animation-fill-mode: forwards;
-
-            }
-
-            &:active::before {
-                bottom: 0 !important;
-                left: 0 !important;
-                height: 170px !important;
-                width: 600px !important;
-                border: 4px solid black;
-            }
-
-            a {
-                font-size: 96px;
-                font-weight: 700;
-                font-family: Syne;
-                color: #000000;
-                text-decoration: none;
-            }
-        }
+    &::before {
+        content: attr(href);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-bottom: 4px solid black;
+        border-left: 4px solid black;
+        width: 39px;
+        height: 52px;
     }
+
+    a {
+        font-size: 96px;
+        font-weight: 700;
+        font-family: Syne;
+        color: #000000;
+        text-decoration: none;
+    }
+}
+
+.border {
+    @extend .border-base;
+}
+
+.border-hover {
+    @extend .border-base;
+
+    &::before {
+        animation: border-animation 0.2s ease-out;
+        animation-fill-mode: forwards;
+    }
+}
+
+.border-active {
+    @extend .border-base;
+
+    &::before {
+        bottom: 0;
+        left: 0;
+        height: 170px;
+        width: 600px;
+        border: 4px solid black;
+    }
+}
+
+@keyframes border-animation {
+    35% {
+        height: 0px;
+        width: 39px;
+        left: 0px;
+    }
+
+    45% {
+        width: 600px;
+    }
+
+    70% {
+        height: 0px;
+        width: 600px;
+        left: 0px;
+
+    }
+
+    100% {
+        height: 0px;
+        width: 250px;
+        left: 350px;
+    }
+}
+
+#aboutMeLink,
+#mySkillsLink {
+    margin-bottom: 30px;
 }
 
 .menu-footer {
@@ -124,7 +139,7 @@
     background-color: #FFFCF3;
 
     .menu-footer-content {
-        clip-path: polygon(0 0, 100% 50%, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 11vw, 100% 100%, 0% 100%);
         background-color: #000000;
         height: 250px;
         display: flex;
@@ -174,26 +189,6 @@
     }
 }
 
-@keyframes hover-link-inaktiv {
-    0% {
-        padding-bottom: 10px;
-    }
-
-    100% {
-        padding-bottom: 0px;
-    }
-}
-
-@keyframes hover-link-active {
-    0% {
-        padding-bottom: 0px;
-    }
-
-    100% {
-        padding-bottom: 10px;
-    }
-}
-
 .hide-menu {
     transform: translateY(0px) !important;
 }
@@ -231,143 +226,253 @@
 }
 
 
-@media (max-height: 903px) and (min-width: 1025px) {
+@media (max-height: 962px) and (min-width: 1025px) {
 
     .nav-container {
-        height: 10.189vh;
+        height: 9.563vh;
 
         .top-bar {
             img {
-                height: 3.322vh;
+                height: 3.12vh;
             }
 
             button {
                 img {
-                    height: 3.543vh;
+                    height: 3.33vh;
                 }
             }
         }
     }
 
     .menu-container {
-        top: 10.189vh !important;
-        height: calc(100vh - 10.189vh) !important;
+        top: 9.563vh !important;
+        height: calc(100vh - 9.563vh) !important;
     }
 
-    .border {
-        height: 18.826vh !important;
-        width: 66.445vh !important;
+    .border-base {
+        height: 17.67vh;
+        width: 60.29vh;
 
         &::before {
-            border-bottom: 0.443vh solid black !important;
-            border-left: 0.443vh solid black !important;
-            width: 4.39vh !important;
-            height: 5.758vh !important;
-
-            @keyframes border-animation {
-                35% {
-                    height: 0px;
-                    width: 4.39vh !important;
-                    ;
-                    left: 0px;
-                }
-
-                45% {
-                    width: 66.445vh !important;
-                    ;
-                }
-
-                70% {
-                    height: 0px;
-                    width: 66.445vh !important;
-                    ;
-                    left: 0px;
-
-                }
-
-                100% {
-                    height: 0px;
-                    width: 27.685vh !important;
-                    ;
-                    left: 0px;
-                    left: 38.76vh !important;
-                    ;
-                }
-            }
-        }
-
-        &:active::before {
-            height: 18.826vh !important;
-            width: 66.445vh !important;
-            border: 0.443vh solid black !important;
-            ;
+            border-bottom: 0.42vh solid black;
+            border-left: 0.42vh solid black;
+            width: 4.05vh;
+            height: 5.41vh;
         }
 
         a {
-            font-size: 10.63vh !important;
+            font-size: 9.98vh;
         }
+    }
+
+    .border-active {
+        @extend .border-base;
+
+        &::before {
+            height: 17.67vh;
+            width: 60.29vh;
+            border: 0.42vh solid black;
+        }
+    }
+
+    @keyframes border-animation {
+        35% {
+            height: 0px;
+            width: 4.06vh;
+            left: 0px;
+        }
+
+        45% {
+            width: 60.29vh;
+        }
+
+        70% {
+            height: 0px;
+            width: 60.29vh;
+            left: 0px;
+
+        }
+
+        100% {
+            height: 0px;
+            width: 25.99vh;
+            left: 36.39vh;
+        }
+    }
+
+    #aboutMeLink,
+    #mySkillsLink {
+        margin-bottom: 3.12vh;
     }
 
     .menu-footer-content {
-        height: 27.685vh !important;
-        padding: 0% 5% 5.537vh !important;
+        height: 25.99vh !important;
+        padding: 0% 5% 5.198vh !important;
 
         p {
-            font-size: 8.64vh !important;
+            font-size: 8.11vh !important;
         }
 
         a {
-            font-size: 2.547vh !important;
+            font-size: 2.4vh !important;
         }
 
         .links {
-            width: 22.148vh !important;
+            width: 20.8vh !important;
 
             a {
                 img {
-                    height: 4.43vh;
-                    padding-top: 1.107vh;
+                    height: 4.16vh !important;
+                    padding-top: 1.04vh !important;
                 }
             }
         }
     }
 
-    .hover-link {
-        animation: hover-link-active-responsiv 0.2s ease-in-out forwards;
-    }
-
-    .reset-link {
-        animation: hover-link-inaktiv-responsiv 0.2s ease-in-out forwards;
-    }
-
-    @keyframes hover-link-active-responsiv {
+    @keyframes hover-link-active {
         0% {
             padding-bottom: 0px !important;
-            padding-top: 1.107vh !important;
+            padding-top: 1.04vh !important;
         }
 
         100% {
-            padding-bottom: 1.107vh !important;
+            padding-bottom: 1.04vh !important;
             padding-top: 0px !important;
         }
     }
 
-    @keyframes hover-link-inaktiv-responsiv {
+    @keyframes hover-link-inaktiv {
         0% {
-            padding-bottom: 1.107vh !important;
+            padding-bottom: 1.04vh !important;
             padding-top: 0px !important;
         }
 
         100% {
             padding-bottom: 0px !important;
-            padding-top: 1.107vh !important;
+            padding-top: 1.04vh !important;
         }
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-height: 760px) and (min-width: 1025px) {
 
-    .links {
-        display: none !important;
+
+    .menu-footer-content {
+        clip-path: polygon(0 0, 100% 50%, 100% 100%, 0% 100%) !important;
+    }
+}
+
+@media (max-width: 1024px) and (min-aspect-ratio: 9/16) {
+    nav {
+        background-color: #1cf000 !important;
+    }
+
+    .menu-footer-content {
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0% 5% 50px;
+
+        div {
+            align-self: flex-start;
+
+            p {
+                font-size: 48px !important;
+                animation: pulse-white 2.75s infinite ease-in-out;
+            }
+
+            @keyframes pulse-white {
+                10% {
+                    color: rgb(255, 255, 255);
+                }
+
+                25% {
+                    color: #00BC8F;
+                }
+
+                75% {
+                    color: #00BC8F;
+                }
+
+                90% {
+                    color: rgb(255, 255, 255);
+                }
+            }
+
+            a {
+                font-size: 23px;
+                font-family: Overpass;
+            }
+        }
+
+        .links {
+            width: 200px;
+            align-self: flex-end;
+
+            a {
+                cursor: pointer;
+
+                img {
+                    height: 40px;
+                    padding-bottom: 0;
+                    padding-top: 10px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) and (max-aspect-ratio: 9/16) {
+    nav {
+        background-color: #b60000 !important;
+    }
+
+    .menu-footer-content {
+        clip-path: polygon(0 0, 100% 11vw, 100% 100%, 0% 100%);
+        background-color: #000000;
+        height: 250px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        padding: 0% 5% 50px;
+
+        p,
+        a {
+            color: #FFFCF3;
+            text-decoration: none;
+        }
+
+        p {
+            font-size: 78px;
+            font-family: Syne;
+            font-weight: 800;
+            margin: 0;
+
+            &:hover {
+                transition: color 0.190s ease-in-out;
+                color: #00BC8F;
+            }
+        }
+
+        a {
+            font-size: 23px;
+            font-family: Overpass;
+        }
+
+        .links {
+            width: 200px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            a {
+                cursor: pointer;
+
+                img {
+                    height: 40px;
+                    padding-bottom: 0;
+                    padding-top: 10px;
+                }
+            }
+        }
     }
 }
