--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -49,6 +49,7 @@
   margin-bottom: 70px;
 
   &:hover {
+
     .pointer,
     .pointer-reverse {
       height: 75px !important;
@@ -65,7 +66,7 @@
     .image-reverse::before {
       opacity: 1;
     }
-  
+
     .description,
     .description-reverse {
       transform: translate(0%) !important;
@@ -114,6 +115,7 @@
 
 .image {
   @extend .image-base;
+
   &::before {
     border: 4px solid black;
     left: 20px;
@@ -122,6 +124,7 @@
 
 .image-reverse {
   @extend .image-base;
+
   &::before {
     border: 4px solid black;
     right: 20px;
@@ -267,6 +270,7 @@
     height: auto;
 
     &:hover {
+
       .pointer,
       .pointer-reverse {
         height: 4.56vw !important;
@@ -275,7 +279,7 @@
     }
   }
 
-  .image-base {  
+  .image-base {
     &::before {
       border: 0.243vw solid black;
       top: 1.21vw
@@ -287,7 +291,7 @@
       left: 1.21vw
     }
   }
-  
+
   .image-reverse {
     &::before {
       right: 1.21vw
@@ -298,12 +302,12 @@
     height: 2.91vw;
     width: 2.91vw
   }
-  
+
   .pointer {
     right: -1.58vw;
     transform: translate(+50%, -50%) rotate(135deg);
   }
-  
+
   .pointer-reverse {
     @extend .pointer-base;
     left: -1.58vw;
@@ -313,7 +317,7 @@
   .text {
     padding-left: 9.12vw;
   }
-  
+
   .text-reverse {
     padding-right: 9.12vw;
   }
@@ -346,11 +350,11 @@
     font-size: 1.4vw;
 
     &:hover {
-      width: calc( 11.49vw * 1.26 );
+      width: calc(11.49vw * 1.26);
     }
-  
+
     &:active {
-      width: calc( 11.49vw * 1.26 );
+      width: calc(11.49vw * 1.26);
     }
   }
 }
@@ -358,27 +362,36 @@
 @media (max-width: 1024px) {
 
   h2 {
-    font-size: 78px;
+    // font-size:  8.533vw !important;
     margin: 20px 0 35px 0;
     animation: pulse 3s infinite ease-in-out;
   }
 
   @keyframes pulse {
-    0% {
+    10% {
       color: black;
     }
-    20% {
+
+    25% {
       color: #00BC8F;
     }
-    80% {
+
+    75% {
       color: #00BC8F;
     }
-    100% {
+
+    90% {
       color: black;
     }
   }
 
   p {
     font-size: 23px;
+  }
+}
+
+@media (max-width: 630px) {
+  h2 {
+    font-size: 12.38vw !important;
   }
 }
