--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -52,6 +52,7 @@ nav {
     justify-content: space-around;
     background-color: #FFFCF3;
     width: 100vw;
+    height: 64%;
     flex-grow: 1;
 }
 
